<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classification_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/family_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/family_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/family_name_format"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/village_town"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/village_town_format"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/quarter_clan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/quarter_clan_format"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/street_format"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/landmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/landmark_format"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />
</LinearLayout>