<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?actionBarSize"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/FilterTaskStyle.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sort_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/spinner_background"
            android:entries="@array/task_sort_options" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/lighter_grey" />


        <TextView
            android:id="@+id/status_label"
            style="@style/FilterTaskStyle.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/status"
            android:textStyle="bold" />


        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/business_status_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:alignContent="stretch"
            app:alignItems="stretch"
            app:flexWrap="wrap">


            <ToggleButton
                android:id="@+id/toggle_sprayed"
                style="@style/TaskFilterToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_bg"
                android:textOff="@string/sprayed"
                android:textOn="@string/sprayed" />


            <ToggleButton
                android:id="@+id/toggle_not_sprayed"
                style="@style/TaskFilterToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_bg"
                android:textOff="@string/not_sprayed"
                android:textOn="@string/not_sprayed" />

            <ToggleButton
                android:id="@+id/toggle_not_srayable"
                style="@style/TaskFilterToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_bg"
                android:textOff="@string/not_sprayable"
                android:textOn="@string/not_sprayable" />


            <ToggleButton
                android:id="@+id/toggle_not_visited"
                style="@style/TaskFilterToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_bg"
                android:textOff="@string/not_visited"
                android:textOn="@string/not_visited" />


            <ToggleButton
                android:id="@+id/toggle_complete"
                style="@style/TaskFilterToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_bg"
                android:textOff="@string/complete"
                android:textOn="@string/complete" />

            <ToggleButton
                android:id="@+id/toggle_in_complete"
                style="@style/TaskFilterToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_bg"
                android:textOff="@string/incomplete"
                android:textOn="@string/incomplete" />


            <ToggleButton
                android:id="@+id/toggle_not_eligible"
                style="@style/TaskFilterToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_bg"
                android:textOff="@string/not_eligible"
                android:textOn="@string/not_eligible" />


            <ToggleButton
                android:id="@+id/toggle_in_progress"
                style="@style/TaskFilterToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_bg"
                android:textOff="@string/in_progress"
                android:textOn="@string/in_progress" />


        </com.google.android.flexbox.FlexboxLayout>


        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_grey" />

        <TextView
            android:id="@+id/task_type_label"
            style="@style/FilterTaskStyle.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_type"
            android:textStyle="bold" />


        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/task_code_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:alignContent="stretch"
            app:alignItems="stretch"
            app:flexWrap="wrap">


        </com.google.android.flexbox.FlexboxLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_grey" />


        <TextView
            style="@style/FilterTaskStyle.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intervention_unit"
            android:textStyle="bold" />


        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:alignContent="stretch"
            app:alignItems="stretch"
            app:flexWrap="wrap">


            <ToggleButton
                android:id="@+id/toggle_operationalArea"
                style="@style/TaskFilterToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_bg"
                android:textOff="@string/operational_area"
                android:textOn="@string/operational_area" />


            <ToggleButton
                android:id="@+id/toggle_structure"
                style="@style/TaskFilterToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_bg"
                android:textOff="@string/structure"
                android:textOn="@string/structure" />


            <ToggleButton
                android:id="@+id/toggle_family"
                style="@style/TaskFilterToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_bg"
                android:textOff="@string/family"
                android:textOn="@string/family" />

            <ToggleButton
                android:id="@+id/toggle_person"
                style="@style/TaskFilterToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_bg"
                android:textOff="@string/person"
                android:textOn="@string/person" />


        </com.google.android.flexbox.FlexboxLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_grey" />


        <Button
            android:id="@+id/apply_filters"
            style="@style/FilterTaskStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/apply_filters_bg"
            android:text="@string/apply_filters"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>
