<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/customAppThemeBlue">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/filter_tasks_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/customAppThemeBlue"
            android:theme="@style/FamilyTheme.AppBarOverlay"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp">

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/clear_filters"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/task_toolbar_margin"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="@dimen/register_member_title_size" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:fillViewport="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/FilterTaskStyle.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_students_by"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <RadioButton
                        android:id="@+id/radioGradeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/grade_and_last_name" />

                    <RadioButton
                        android:id="@+id/radioGradeAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grade_and_age" />

                    <RadioButton
                        android:id="@+id/radioAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age" />

                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/lighter_grey" />

                <TextView
                    android:id="@+id/filer_by_grade"
                    style="@style/FilterTaskStyle.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:text="@string/filter_by_grade"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/linearLayoutGrades"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp">

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lighter_grey" />

                <TextView
                    android:id="@+id/task_type_label"
                    style="@style/FilterTaskStyle.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_by_age"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/linearLayoutAges"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/range_6_10"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/range_11_15"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/range_16_18"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adult"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lighter_grey" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lighter_grey" />

                <Button
                    android:id="@+id/apply_filters"
                    style="@style/FilterTaskStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/apply_filters_bg"
                    android:text="@string/apply_filters"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Base.Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
