<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/patient_column"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/register_list_item_margin"
    android:layout_marginEnd="@dimen/register_list_item_end_margin"
    android:background="@color/white">

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/event_date"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="0dp"
        android:singleLine="true"
        android:text="@string/event_date"
        android:textColor="@color/text_black"
        android:textSize="@dimen/register_list_title_size" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/event_type"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingTop="@dimen/register_list_top_bottom_padding"
        android:text="@string/form_name"
        android:textColor="@color/text_black"
        android:textSize="@dimen/register_list_title_size" />


    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/sop"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingTop="@dimen/register_list_top_bottom_padding"
        android:text="@string/sop"
        android:textColor="@color/text_black"
        android:textSize="@dimen/register_list_title_size" />


    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/entity"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingTop="@dimen/register_list_top_bottom_padding"
        android:text="@string/hh_village_name"
        android:textColor="@color/text_black"
        android:textSize="@dimen/register_list_title_size" />


    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/status"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingTop="@dimen/register_list_top_bottom_padding"
        android:text="@string/status"
        android:textColor="@color/text_black"
        android:textSize="@dimen/register_list_title_size" />


</LinearLayout>

